[package]
name = "nym-gateway-directory"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[dependencies]
itertools.workspace = true
nym-client-core = { path = "../common/client-core" }
nym-http-api-client = { path = "../common/http-api-client" }
nym-sphinx = { path = "../common/nymsphinx" } # replaces the types pulled in from nym-sdk in nym-vpn-client repo
nym-topology = { path = "../common/topology" } # replaces the types pulled in from nym-sdk in nym-vpn-client repo
nym-validator-client = { path = "../common/client-libs/validator-client" }
nym-vpn-api-client = { git = "https://github.com/nymtech/nym-vpn-client/", rev = "5ab01ba06057449614dd6a8450d04358c5ec33d1" }
nym-crypto = { path = "../common/crypto" }
nym-sphinx-addressing = { path = "../common/nymsphinx/addressing" }
nym-network-defaults = { path = "../common/network-defaults" }

rand.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
