[package]
name = "nym-gateway-directory"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
itertools.workspace = true
nym-client-core = { path = "../common/client-core" }
nym-http-api-client = { path = "../common/http-api-client", features = ["network-defaults"] }
nym-sphinx = { path = "../common/nymsphinx" }
nym-topology = { path = "../common/topology" }
nym-validator-client = { path = "../common/client-libs/validator-client" }
nym-crypto = { path = "../common/crypto" }
nym-sphinx-addressing = { path = "../common/nymsphinx/addressing" }
nym-network-defaults = { path = "../common/network-defaults" }
nym-contracts-common = { path = "../common/cosmwasm-smart-contracts/contracts-common" }

rand.workspace = true
serde.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

serde_json.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
