[package]
name = "nym-gateway-probe"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["cargo", "derive"] }
futures = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
pnet_packet = { workspace = true }
rand = { workspace = true }
rand09 = { workspace = true }
reqwest = { workspace = true, features = ["socks"] }
serde = { workspace = true }
serde_json = { workspace = true }
semver = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = [
    "process",
    "rt-multi-thread",
    "fs",
    "sync",
    "macros",
] }
tokio-util.workspace = true
tracing-subscriber.workspace = true
url = { workspace = true }
utoipa = { workspace = true, optional = true }


nym-api-requests = { path = "../nym-api/nym-api-requests" }
nym-authenticator-client = { workspace = true }
nym-authenticator-requests = { workspace = true }
nym-bandwidth-controller = { workspace = true }
nym-bin-common = { workspace = true }
nym-client-core = { workspace = true }
nym-config = { workspace = true }
nym-connection-monitor = { path = "../common/nym-connection-monitor" }
nym-credentials = { workspace = true }
nym-credentials-interface = { workspace = true }
nym-credential-utils = { workspace = true }
nym-crypto = { workspace = true }
nym-http-api-client = { path = "../common/http-api-client" }
nym-http-api-client-macro = { path = "../common/http-api-client-macro" }
nym-ip-packet-client = { workspace = true }
nym-ip-packet-requests = { workspace = true }
nym-kkt-ciphersuite = { workspace = true }
nym-lp = { path = "../common/nym-lp" }
nym-network-defaults = { path = "../common/network-defaults" }
nym-node-requests = { path = "../nym-node/nym-node-requests" }
nym-registration-client = { path = "../nym-registration-client" }
nym-registration-common = { path = "../common/registration" }
nym-sdk = { workspace = true }
nym-topology = { workspace = true }
nym-validator-client = { workspace = true }

[features]
utoipa = ["dep:utoipa"]
test-utils = []

[build-dependencies]
anyhow = { workspace = true }
vergen-gitcl = { workspace = true, default-features = false, features = [
    "build",
    "cargo",
    "rustc",
] }

[package.metadata.cargo-machete]
ignored = ["vergen", "nym-http-api-client"]
