[package]
name = "nym-id"
version = "0.1.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bs58.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing.workspace = true

nym-bin-common = { path = "../common/bin-common", features = ["output_format", "basic_tracing"] }
nym-credential-storage = { path = "../common/credential-storage" }
nym-id-lib = { path = "../common/nym-id-lib" }
