[package]
name = "nym-ip-packet-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
description = "Nym's implementation of a client that sends and receives IP packets"

[lints]
workspace = true

[dependencies]
bincode.workspace = true
bytes.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true

nym-sdk = { workspace = true }
nym-ip-packet-requests = { workspace = true }
