[package]
name = "nym-network-monitor"
version = "1.0.2"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["json"] }
clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
petgraph = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "time"] }
tokio-util = { workspace = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
tokio-postgres = { workspace = true }

# internal
nym-bin-common = { workspace = true, features = ["basic_tracing"] }
nym-client-core = { workspace = true }
nym-crypto = { workspace = true }
nym-network-defaults = { workspace = true }
nym-gateway-requests = { workspace = true }
nym-sdk = { workspace = true }
nym-sphinx = { workspace = true }
nym-topology = { workspace = true }
nym-types = { workspace = true }
nym-validator-client = { workspace = true }
nym-http-api-client = { workspace = true }
nym-mixnet-contract-common = { workspace = true }
