# Copyright 2023 - Nym Technologies SA <contact@nymtech.net>
# SPDX-License-Identifier: GPL-3.0-only

[package]
name = "nym-node"
version = "1.23.0"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
edition.workspace = true
license = "GPL-3.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { workspace = true }
anyhow.workspace = true
arc-swap = { workspace = true }
bip39 = { workspace = true, features = ["zeroize"] }
bs58.workspace = true
bloomfilter = { workspace = true }
celes = { workspace = true }
cfg-if = { workspace = true }# country codes
colored = { workspace = true }
console-subscriber = { workspace = true, optional = true }
csv = { workspace = true }
clap = { workspace = true, features = ["cargo", "env"] }
futures = { workspace = true }
humantime-serde = { workspace = true }
human-repr = { workspace = true }
ipnetwork = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-indicatif = { workspace = true }
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["macros", "sync", "rt-multi-thread"] }
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = { workspace = true }
toml = { workspace = true }
url = { workspace = true, features = ["serde"] }
zeroize = { workspace = true, features = ["zeroize_derive"] }

# system info:
cupid = { workspace = true }
sysinfo = { workspace = true }

nym-bin-common = { path = "../common/bin-common", features = [
    "basic_tracing",
    "output_format",
] }
nym-client-core-config-types = { path = "../common/client-core/config-types", features = [
    "disk-persistence",
] }
nym-config = { workspace = true }
nym-credential-verification = { path = "../common/credential-verification" }
nym-crypto = { path = "../common/crypto", features = ["asymmetric", "rand"] }
nym-nonexhaustive-delayqueue = { path = "../common/nonexhaustive-delayqueue" }
nym-mixnet-client = { path = "../common/client-libs/mixnet-client" }
nym-noise = { path = "../common/nymnoise" }
nym-noise-keys = { path = "../common/nymnoise/keys" }
nym-pemstore = { path = "../common/pemstore" }
nym-sphinx-acknowledgements = { workspace = true }
nym-sphinx-addressing = { workspace = true }
nym-sphinx-framing = { workspace = true }
nym-sphinx-types = { workspace = true }
nym-sphinx-forwarding = { workspace = true }
nym-sphinx-routing = { path = "../common/nymsphinx/routing" }
nym-sphinx-params = { path = "../common/nymsphinx/params" }
nym-statistics-common = { path = "../common/statistics" }
nym-task = { path = "../common/task" }
nym-types = { path = "../common/types" }
nym-validator-client = { workspace = true }
nym-wireguard = { path = "../common/wireguard" }
nym-wireguard-types = { workspace = true }
nym-verloc = { path = "../common/verloc" }
nym-metrics = { workspace = true}
nym-gateway-stats-storage = { path = "../common/gateway-stats-storage" }
nym-topology = { workspace = true }
nym-http-api-client = { path = "../common/http-api-client" }

# http server
# useful for `#[axum_macros::debug_handler]`
#axum-macros = "0.3.8"
axum.workspace = true
time = { workspace = true, features = ["serde"] }
tower-http = { workspace = true, features = ["fs"] }
utoipa = { workspace = true, features = ["axum_extras", "time"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

nym-http-api-common = { workspace = true, features = [
    "utoipa",
    "output",
    "middleware",
] }
nym-node-requests = { path = "nym-node-requests", default-features = false, features = [
    "openapi",
] }
nym-node-metrics = { path = "nym-node-metrics" }

# nodes:
nym-gateway = { path = "../gateway" }
nym-network-requester = { path = "../service-providers/network-requester" }
nym-ip-packet-router = { path = "../service-providers/ip-packet-router" }


# throughput tester to recreate lioness
# we don't care about particular versions - just pull whatever is used by sphinx
lioness = "*"
chacha = "0.3.0"
arrayref = "*"
blake2 = "=0.8.1"
sha2 = { workspace = true }
hkdf = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false


[build-dependencies]
# temporary bonding information v1 (to grab and parse nym-mixnode and nym-gateway package versions)
cargo_metadata = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
rand_chacha = { workspace = true }

[features]
tokio-console = ["console-subscriber", "nym-task/tokio-tracing"]

[lints]
workspace = true
