[package]
name = "nym-outfox"
version = "0.2.0"
description = "Outfox package format"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }


[dependencies]
rayon = { workspace = true }
blake3 = { workspace = true }
zeroize = { workspace = true }
chacha20 = { workspace = true, features = ["std"] }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true, features = ["js"] }
thiserror = { workspace = true }
log = { workspace = true }

rand = "0.9.1"
bs58 = "0.5.1"
libcrux-kem = "0.0.3"

[dev-dependencies]
criterion = { workspace = true }
fastrand = { workspace = true }


[[bench]]
name = "bench"
harness = false