[package]
name = "nym-outfox"
description = "Outfox package format"
version.workspace = true
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = { workspace = true }
zeroize = { workspace = true }
chacha20 = { workspace = true, features = ["std"] }
x25519-dalek = { workspace = true }
chacha20poly1305 = { workspace = true }
thiserror = { workspace = true }
sphinx-packet = { workspace = true }

[dev-dependencies]
fastrand = { workspace = true }
